--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<html lang="en">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width initial-scale=1">
@@ -15,6 +16,11 @@
     <p class="quote">"The freedom of Mankind does not lie in the fact that we can do what we want, but that we do not have to do that which we do not want."</p>
     <p class="author"><small>– Jean-Jacques Rousseau</small></p>
   </div>
-    
+<div class="language">
+  <ul>
+    <li><a href="index_hu.html" title="Hungarian"><img class="flag" src="assets/hun-flag.jpg" alt="Hungarian flag"></a></li>
+    <li><a href="index_es.html" title="Spanish"><img class="flag" src="assets/es-flag.jpg" alt="Spanish flag"></a></li>
+  </ul>
+</div>  
 </body>
 </html>
