--- a/indexhu.html
+++ b/indexhu.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<html lang="en">
+<html lang="hu">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width initial-scale=1">
@@ -13,7 +13,7 @@
 <body>
 
   <div class="wrapper">
-    <p class="quote">"The world is a book, and those who do not travel read only one page."</p>
+    <p class="quote">"A világ egy könyv és azok akik nem utaznak csak egy oldalt olvasnak el belőle."</p>
     <p class="author"><small>– Saint Augustine</small></p>
   </div>
 <div class="language">
