--- a/indexhu.html
+++ b/indexhu.html
@@ -13,7 +13,7 @@
 <body>
 
   <div class="wrapper">
-    <p class="quote">"A világ egy könyv és azok akik nem utaznak csak egy oldalt olvasnak el belőle."</p>
+    <p class="quote">"A világ egy könyv és azok akik nem utaznak csak egy oldalt olvasnak el."</p>
     <p class="author"><small>– Saint Augustine</small></p>
   </div>
 <div class="language">
